# Encrypted-Chat-Service

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DEPENDENCIES.md  GEMINI.md  GEMINI_PROMPT.md  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  WINDOWS_BUILD.md  build-dist.ps1  report.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: analyze.yml  asan.yml  ci.yml  lint.yml
cmake/: cloak_add_library.cmake  ev_add_library.cmake  msvc_options.cmake  warnings.cmake
docs/: DEMO.md  OOP_PRINCIPLES.md  overview-project.md
docs/adr/: 0001-oop-cpp-not-c-abi.md  0002-windows-native-msvc.md  0003-noise-xx-for-phase-1.md  0004-sqlite-column-aead-over-sqlcipher.md  0005-mdns-for-discovery.md  0006-thread-per-connection-relay.md  README.md
include/cloak/app/: CMakeLists.txt  chat_application.cpp  chat_application.h  main.cpp
include/cloak/core/: CMakeLists.txt  error.cpp  error.h  log.h  types.h
include/cloak/crypto/: CMakeLists.txt  crypto.cpp  crypto.h  secure_buffer.h  types.h
include/cloak/discovery/: CMakeLists.txt  discovery_service.h  loopback_discovery.cpp  loopback_discovery.h
include/cloak/group/: CMakeLists.txt  group_manager.cpp  group_manager.h  group_session.cpp  group_session.h  group_types.h
include/cloak/identity/: CMakeLists.txt  device_link.h  device_registry.cpp  device_registry.h  identity.cpp  identity.h  peer_directory.cpp  peer_directory.h
include/cloak/relay/: CMakeLists.txt  relay_main.cpp  relay_server.cpp  relay_server.h
include/cloak/session/: CMakeLists.txt  session.cpp  session.h  session_manager.cpp  session_manager.h
include/cloak/store/: CMakeLists.txt  message_store.cpp  message_store.h
include/cloak/transfer/: CMakeLists.txt  file_transfer.cpp  file_transfer.h
include/cloak/transport/: CMakeLists.txt  mailbox_transport.cpp  mailbox_transport.h  relay_transport.cpp  relay_transport.h  tcp_transport.cpp  tcp_transport.h  transport.h
include/cloak/ui/: CMakeLists.txt  chat_ui.cpp  chat_ui.h
include/cloak/wire/: CMakeLists.txt  framing.cpp  framing.h  message.h
include/ev/app/: CMakeLists.txt  chat_application.cpp  chat_application.h  main.cpp
include/ev/core/: CMakeLists.txt  error.cpp  error.h  log.h  types.h
include/ev/crypto/: CMakeLists.txt  crypto.cpp  crypto.h  secure_buffer.h  types.h
include/ev/discovery/: CMakeLists.txt  discovery_service.h  loopback_discovery.cpp  loopback_discovery.h
include/ev/group/: CMakeLists.txt  group_manager.cpp  group_manager.h  group_session.cpp  group_session.h  group_types.h
include/ev/identity/: CMakeLists.txt  device_registry.cpp  device_registry.h  identity.cpp  identity.h  peer_directory.cpp  peer_directory.h
include/ev/relay/: relay_main.cpp  relay_server.h
include/ev/session/: session.cpp  session.h  session_manager.cpp  session_manager.h
include/ev/store/: CMakeLists.txt  message_store.cpp  message_store.h
include/ev/transfer/: file_transfer.cpp
include/ev/transport/: CMakeLists.txt  relay_transport.h  tcp_transport.h  transport.h
include/ev/ui/: CMakeLists.txt  chat_ui.cpp  chat_ui.h
include/ev/wire/: CMakeLists.txt  framing.cpp  framing.h  message.h
installer/: README.md  cloak.iss
src/app/: CMakeLists.txt  chat_application.cpp  chat_application.h  main.cpp
src/core/: CMakeLists.txt  error.cpp  error.h  log.h  types.h
src/crypto/: CMakeLists.txt  crypto.cpp  crypto.h  secure_buffer.h  types.h
src/discovery/: CMakeLists.txt  discovery_service.h  loopback_discovery.cpp  loopback_discovery.h  mdns_discovery_win32.cpp  mdns_discovery_win32.h
src/group/: group_manager.cpp  group_session.cpp  group_session.h
src/identity/: CMakeLists.txt  device_link.h  device_registry.cpp  device_registry.h  identity.cpp  identity.h  peer_directory.cpp  peer_directory.h
src/relay/: CMakeLists.txt  relay_server.cpp
src/session/: CMakeLists.txt  session.cpp  session.h  session_manager.cpp  session_manager.h
src/store/: CMakeLists.txt  message_store.cpp  message_store.h
src/transfer/: CMakeLists.txt  file_transfer.cpp  file_transfer.h
src/transport/: CMakeLists.txt  mailbox_transport.cpp  mailbox_transport.h  relay_transport.cpp  tcp_transport.cpp  tcp_transport.h  transport.h
src/ui/: CMakeLists.txt  chat_ui.cpp  chat_ui.h
src/wire/: CMakeLists.txt  framing.cpp  framing.h  message.h
tests/unit/core/: test_core.cpp
tests/unit/crypto/: test_crypto.cpp
tests/unit/discovery/: test_discovery.cpp
tests/unit/group/: test_group.cpp
tests/unit/identity/: test_device_registry.cpp  test_identity.cpp
tests/unit/relay/: test_relay.cpp
tests/unit/session/: test_session.cpp
tests/unit/store/: test_store.cpp
tests/unit/transport/: test_transport.cpp
tests/unit/ui/: test_ui.cpp
tests/unit/wire/: test_wire.cpp
tests/vectors/crypto/: argon2id.txt  rfc7748.txt  rfc8032.txt  rfc8439.txt
